Change how data tests are run so that new test that cause OutOfMemoryException does not cause gradle to bomb